--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ h2, h3 {font-weight: normal;}
 .co-imagebox { position: relative; display: block;}
 .co-imagebox:hover .-zoom {opacity: 1;}
 .co-imagebox>img {width: 100%; height: auto;}
-.price-num { font-size: 38px; margin: 0; display: inline-block; font-weight: 300; font-family: 'Gabriela', serif; }
+.price-num { font-size: 38px; margin: 0; display: inline-block; font-weight: 300; margin-right: auto; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; }
 .price-text { color: #565656; font-family: 'Gabriela', serif;}
 .price-description { display: block; font-size: .8rem; }
 .co-hot { margin-top: 35px; max-width: 300px; font-size: 1rem; line-height: 1.2; font-family: 'Gabriela', serif; }
