--- a/maxima51.ru/css/style.css
+++ b/maxima51.ru/css/style.css
@@ -93,8 +93,8 @@ h2, h3 {font-weight: normal;}
 .-lightbox:target { outline: none; display: flex; }
 .-zoom {position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,.35); display: flex; opacity: 0; transition: opacity 100ms ease; margin: 1rem;}
 .-zoom>svg {height: 3rem; width: 3rem; margin: auto; color: #f0f0f0;}
-.-big-number {font-size: 38px; margin: 0; font-family: 'Gabriela', serif;}
-.-small-text {color: #565656; font-size: .8rem; line-height: 1; display: block; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;}
+.-big-text {font-size: 24px; margin: 0; font-family: 'Gabriela', serif; line-height: 1;}
+.-small-text {margin-top: 10px; color: #565656; font-size: .8rem; line-height: 1; display: block; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;}
 .-table-cell-caption {display: none;}
 @media (min-width: 520px) {
   .-table-cell-caption {display: inline;}
@@ -189,7 +189,7 @@ h2, h3 {font-weight: normal;}
 #content-contacts { margin-top: 50px; text-align: center; }
 .cc-header { margin: 20px 0; font-size: .8rem; font-weight: bold; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; color: #3757a1; text-transform: uppercase; }
 .cc-phone { font-size: 1.5rem; line-height: 1; font-family: 'Gabriela', serif; }
-.cc-description { padding: 20px 0; max-width: 500px; margin: 0 auto; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; }
+.cc-mail { padding: 20px 0; max-width: 500px; margin: 0 auto; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; }
 @media (min-width: 520px) {
-  .cc-phone { font-size: 3.5rem;}
+  .cc-phone { font-size: 2.5rem;}
 }
