--- a/maxima51.ru/css/style.css
+++ b/maxima51.ru/css/style.css
@@ -164,8 +164,8 @@ h2, h3 {font-weight: normal;}
 .co-imagebox { position: relative; display: block;}
 .co-imagebox:hover .-zoom {opacity: 1;}
 .co-imagebox>img {width: 100%; height: auto;}
-.price-num { font-size: 38px; margin: 0; display: inline-block; font-weight: 300; font-family: 'Gabriela', serif; }
-.price-text { color: #565656; margin-right: auto; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;}
+.price-num { font-size: 2rem; margin: 0; display: inline-block; font-weight: 300; font-family: 'Gabriela', serif; }
+.price-text { color: #565656; margin-right: auto; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; margin-left: 4px;}
 .price-description { display: block; font-size: .8rem; }
 .co-hot { margin-top: 35px; font-size: 1rem; line-height: 1.2; font-family: 'Gabriela', serif; }
 .co-hot span { text-decoration: underline; }
