--- a/454244.ru/css/main.css
+++ b/454244.ru/css/main.css
@@ -1,23 +1,27 @@
 @font-face {
     font-family: 'PT Sans';
-    src: local('PT Sans'), local('PTSans-Regular'), url(/fonts/'ptsans.woff2') format('woff2'), url('/fonts/ptsans.woff') format('woff'), url('/fonts/ptsans.ttf') format('truetype');
+    src: local('PT Sans'), local('PTSans-Regular'), url('../fonts/ptsans.woff2') format('woff2'), url('../fonts/ptsans.woff') format('woff'), url('../fonts/ptsans.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'PT Sans';
+    src: local('PT Sans Italic'), local('PTSans-Italic'), url('../fonts/ptsansitalic.woff2') format('woff2'), url('../fonts/ptsansitalic.woff') format('woff'), url('ptsansitalic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
 @font-face {
     font-family: 'Open Sans Condensed';
-    src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'), url('/fonts/opensanscondensedbold.woff2') format('woff2'), url('/fonts/opensanscondensedbold.woff') format('woff'), url('/fonts/opensanscondensedbold.ttf') format('truetype');
+    src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'), url('../fonts/opensanscondensedbold.woff2') format('woff2'), url('../fonts/opensanscondensedbold.woff') format('woff'), url('../fonts/opensanscondensedbold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
-
 
 body, h1, h2, h3, h4, ul, li, figure, figcaption { margin: 0; padding: 0; }
 body { max-width: 425px; margin: 0 auto; position: relative; font-family: 'PT Sans', sans-serif; color: #333; }
 #menu, #category, #pages, #copyright, h1, h2, h3, .notice a, #subscribe .submit, #gallery a {
   font-family: 'Open Sans Condensed', sans-serif; font-weight: bold;}
-#header { background-image: url(/img/hero.jpg); background-position: top left; background-repeat: no-repeat; background-size: contain; }
+#header { background-image: url(../img/hero.jpg); background-position: top left; background-repeat: no-repeat; background-size: contain; }
 @media screen and (min-width:426px) {
   #header { height: 400px; }
 }
@@ -174,5 +178,3 @@ border-radius: 4px;
   object-fit: cover;
   object-position: center;
 }
-
-
